--- a/css/contact.css
+++ b/css/contact.css
@@ -23,7 +23,7 @@
 #contact-form {
     padding:40px;
     border-radius:20px;
-    width:50%;
+    xwidth:50%;
     background:#e2e2e2;
     margin:0 auto 20px auto;
 }
