--- a/css/hero.css
+++ b/css/hero.css
@@ -17,10 +17,3 @@
     line-height: 1.23em;
     font-weight: 100;
 }
-
-#hero img.hero {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 20px;
-}
